# algopioneer

./: .dockerignore  .env  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  ROADMAP.md  TRADING_LOG.md  alpaca_pairs.json  autopilot.sh  build.pid  compare_pairs.py  deny.toml  deploy_alpaca.sh  deploy_alpaca_fix.sh  df  discovered_pairs.json  discovered_pairs_504d.json  discovered_pairs_703d.json  discovered_pairs_730d.json  discovered_pairs_alpaca.json  discovered_pairs_new.json  pairs_config.json  paper_trades_alpaca.csv  sample_data.csv  sandbox_trades.csv  skills-lock.json  test_draft.rs
.agent/checklists/: pre_deploy.md
.agent/context/: glossary.md  trading_terms.md
.agent/skills/check_trading_status/: SKILL.md
.agent/skills/code_review/: SKILL.md
.agent/skills/consult_context/: SKILL.md
.agent/skills/consult_expert/: SKILL.md
.agent/skills/deploy_application/: SKILL.md
.agent/skills/manage_development/: SKILL.md
.agent/skills/perform_checklist/: SKILL.md
.agent/skills/release_flow/: SKILL.md
.agent/skills/use_template/: SKILL.md
.agent/templates/: issue_template.md  strategy_doc.md
.agent/workflows/: alpaca_paper_trading_checkin.md  code_review.md  coinbase_paper_trading_checkin.md  commit_and_push.md  deploy_infrastructure.md  fix_code_review.md  local_build_deploy.md  pairs_health_check.md  paper_trading_checkin.md  post_deploy_verify.md  release_flow.md  run_backtest_suite.md  scaffold_strategy.md  update_gemini_md.md  update_readme.md  verify_integrity.md
.cargo/: config.toml
.gemini/: config.yaml
.gemini/skills/check_trading_status/: SKILL.md
.gemini/skills/run_backtest_suite/: SKILL.md
.gemini/skills/trading-wisdom/: SKILL.md
.github/workflows/: build.yml  nightly_backtest.yml  release.yml
dual_leg_results/: equity.csv  results.json  trades.csv
examples/: check_sectors.rs  debug_config.rs
practice_run_results/: equity.csv  results.json  trades.csv
src/: check_ws.rs  health.rs  lib.rs  main.rs  metrics.rs  observability.rs  types.rs
src/application/: mod.rs
src/application/backtest/: mod.rs
src/application/discovery/: config.rs  error.rs  filter.rs  mod.rs  optimizer.rs  sector.rs
src/application/orders/: mod.rs  reconciler.rs  tracker.rs
src/application/ports/: exchange.rs  logging.rs  mod.rs
src/application/resilience/: circuit_breaker.rs  mod.rs
src/application/risk/: daily_limit.rs  executor.rs  mod.rs
src/application/strategy/: mod.rs  moving_average.rs  supervisor.rs  tick_router.rs
src/application/trading/: simple_engine.rs
src/backtest/: mod.rs
src/cli/: config.rs  mod.rs
src/coinbase/: market_data_provider.rs  mod.rs  websocket.rs
src/commands/: backtest.rs  discover.rs  dual_leg.rs  portfolio.rs  trade.rs
src/discovery/: config.rs  filter.rs  mod.rs  optimizer.rs  sector.rs
src/domain/: events.rs  exchange.rs  logging.rs  mod.rs  orders.rs  types.rs
src/domain/math/: kalman.rs  mod.rs
src/domain/validation/: validators.rs
src/examples/: optimize_pairs.rs
src/exchange/: mod.rs
src/exchange/alpaca/: alpaca_client.rs  client.rs  mod.rs  utils.rs  websocket.rs
src/exchange/coinbase/: client.rs  mod.rs  websocket.rs
src/exchange/kraken/: client.rs  mod.rs  websocket.rs
src/infrastructure/: mod.rs
src/infrastructure/coinbase/: market_data_provider.rs  mod.rs  websocket.rs
src/infrastructure/exchange/: mod.rs
src/infrastructure/logging/: csv_recorder.rs  dynamodb_recorder.rs  mod.rs  recorder.rs  throttle.rs  (+1 more)
src/logging/: csv_recorder.rs  dynamodb_recorder.rs  mod.rs  recorder.rs  tracing_recorder.rs
src/math/: kalman.rs
src/orders/: mod.rs  reconciler.rs  tracker.rs  types.rs
src/resilience/: circuit_breaker.rs
src/risk/: daily_limit.rs  executor.rs
src/sandbox/: mod.rs
src/state/: mod.rs
src/strategy/: basis_trading.rs  dual_leg_trading.rs  entry_manager.rs  execution.rs  mod.rs  moving_average.rs  portfolio.rs  supervisor.rs  throttle.rs  tick_router.rs  validators.rs
src/trading/: mod.rs  simple_engine.rs
terraform/: dynamodb.tf  github_oidc.tf  main.tf  monitoring.tf  terraform.tfvars.example
terraform/backends/: prod.hcl
terraform/environments/: prod.tfvars.example  test.tfvars.example
tests/: integration_test.rs  proptest_financial.rs
(+43 files in other folders)
