[package]
name = "algopioneer"
version = "0.1.0"
edition = "2024"

[dependencies]
cbadv = "2.0.2"
dotenv = "0.15.0"
polars = { version = "0.51.0", features = ["lazy", "rolling_window"] }
ta = "0.5.0"
tokio = { version = "1.48.0", features = ["full", "test-util"] }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = "0.4.42"
async-trait = "0.1.89"
rand = "0.9.2"
rust_decimal = "1.33"
rust_decimal_macros = "1.33"
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
futures-util = "0.3.31"
url = "2.5.4"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
log = "0.4.28"
env_logger = "0.11.8"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
thiserror = "2.0.17"

[dev-dependencies]
mockall = "0.13.1"
