[package]
name = "algopioneer"
version = "1.3.0"
edition = "2021"  # NP1: Fixed from "2024"

[dependencies]
cbadv = "2.0.2"
dotenvy = "0.15"
polars = { version = "0.51.0", features = ["lazy", "rolling_window"] }
ta = "0.5.0"
tokio = { version = "1.48.0", features = ["full", "test-util"] }
tokio-stream = "0.1"
tokio-util = "0.7"
axum = "0.7"
tower = "0.4"
dashmap = "5.5"
opentelemetry = "0.21"
opentelemetry_sdk = "0.21"
opentelemetry-jaeger = "0.20"
tracing-opentelemetry = "0.22"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = "0.4.42"
async-trait = "0.1.89"
rand = "0.9.2"
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"
tokio-tungstenite = { version = "0.26.1", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.31"
url = "2.5.4"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
log = "0.4.28"
env_logger = "0.11.8"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
thiserror = "2.0.17"
# AS5: Rate limiting for API calls
governor = "0.6"
# OW4: Zero-copy string handling
bytes = "1.5"
# AS1: Prometheus metrics for observability
prometheus = "0.14"
lazy_static = "1.4"
# Trade recording: UUID generation
uuid = { version = "1.10", features = ["v4"] }

# Optional: AWS SDK for DynamoDB trade recording
aws-sdk-dynamodb = { version = "1.51", optional = true }
aws-config = { version = "1.5", optional = true }
apca = "0.30.0"
num-decimal = { version = "0.2.5", default-features = false, features = ["num-v04"] }

[features]
default = []
dynamodb = ["aws-sdk-dynamodb", "aws-config"]

[dev-dependencies]
mockall = "0.13.1"
# AS2: Property-based testing for financial math
proptest = "1.4"
tempfile = "3.23.0"
# OW7: Use jemalloc for better memory allocation performance in long-running async apps

# Jemalloc dependency for non-MSVC targets (Linux/macOS)
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[[example]]
name = "optimize_pairs"
path = "src/examples/optimize_pairs.rs"
